--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "platzimarket-frontend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
+    "start": "webpack serve --config ./webpack.config.js",
+    "clean": "rimraf dist",
     "dev": "webpack --mode development"
   },
   "keywords": [],
@@ -23,6 +24,18 @@
     "mini-css-extract-plugin": "^1.6.0",
     "svg-loader": "^0.0.2",
     "url-loader": "^4.1.1",
-    "webpack-cli": "^4.7.2"
-  }
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JI-Villalobos/platzi-market-front.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JI-Villalobos/platzi-market-front/issues"
+  },
+  "homepage": "https://github.com/JI-Villalobos/platzi-market-front#readme",
+  "description": "",
+  "dependencies": {}
 }
